# works

./: .gitmodules  README.md  STYLES_COMPONENTS_MAPPING.md  download_dejavu_font.py  main.py  requirements.txt  streamlit_app.py  styles.css
auth/: __init__.py  auth.py  users.json
components/: ai_categorizer.py  ai_engine.py  budget_coach.py  file_merger.py  file_parser.py  forecast.py  pdf_export.py  recurring_detector.py  search_filter.py
components/__pycache__/: ai_engine.cpython-313.pyc.2091269039872  budget_coach.cpython-313.pyc.2983214492112  pdf_export.cpython-313.pyc.1646027420224  pdf_export.cpython-313.pyc.2161634566784  pdf_export.cpython-313.pyc.2193412242096  pdf_export.cpython-313.pyc.2231263874768
db/: mongo_conn.py
native_extension/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  native_extension.cpp  native_extension.sln  native_extension.vcxproj  native_extension.vcxproj.filters
native_extension/native_extension.dir/Debug/native_extension.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  native_extension.lastbuildstate
native_extension/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
native_extension/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
utils/: config.py  database.py  visuals.py
